[package]
name = "auto-makemkv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8"
axum-connect = "0.5.3"
axum-extra = "0.12.5"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["env", "derive"] }
env_logger = "0.11.9"
indicatif = "0.18.4"
log = "0.4.29"
prost = "0.13"
regex = "1.12.3"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }

[build-dependencies]
axum-connect-build = "0.5.3"
