[package]
name = "auto-makemkv"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["socks"] }
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["env", "derive"] }
env_logger = "0.11.9"
indicatif = "0.18.4"
log = "0.4.29"
regex = "1.12.3"
tokio = { version = "1.49.0", features = ["full"] }
walkdir = "2.5.0"
tokio-util = "0.7.18"
